rule.output
Terminaux inutilisés dans la grammaire

   tTAB
   tDOLLAR
   tSTRING


État 16 conflits: 1 réduction/réduction


Grammaire

    0 $accept: Main $end

    1 Main: tMAIN tPO tPC Body

    2 Body: tACO Instruction tACC

    3 Instruction: Instructions Instruction
    4            | Instructions
    5            | %empty

    6 Instructions: Calcul
    7             | For
    8             | While
    9             | Print
   10             | Declaration
   11             | If

   12 Declaration: vartype Declarations tFINSTR

   13 Declarations: Multideclaration Declarations
   14             | Lastdeclaration

   15 Multideclaration: tVAR tVIRGULE

   16 Lastdeclaration: tVAR

   17 vartype: tINT
   18        | tCONST

   19 Print: tPRINTF tPO tVAR tPC tFINSTR

   20 $@1: %empty

   21 $@2: %empty

   22 If: tIF tPO Condition tPC $@1 Body $@2 Else

   23 Else: tELSE Body
   24     | %empty

   25 Condition: Expression tCHECKEQ Expression
   26          | Expression tLESS Expression
   27          | Expression tCHECKHIGHER Expression
   28          | Expression tLESSEQUAL Expression
   29          | Expression tMOREEQUAL Expression

   30 $@3: %empty

   31 $@4: %empty

   32 While: tWHILE tPO $@3 Condition tPC $@4 Body

   33 $@5: %empty

   34 $@6: %empty

   35 $@7: %empty

   36 $@8: %empty

   37 For: tFOR tPO $@5 tINT tVAR $@6 tEQUAL tINTNR tFINSTR $@7 Condition tFINSTR $@8 increment tPC Body

   38 increment: %empty
   39          | tVAR tPLUSPLUS
   40          | tVAR tMINUSMINUS

   41 Calcul: tVAR tEQUAL Expression tFINSTR
   42       | tVAR tEQUAL tSUBTRACT Expression tFINSTR
   43       | tVAR tPLUSPLUS tFINSTR
   44       | tVAR tMINUSMINUS tFINSTR
   45       | tVAR tSUBTRACT tEQUAL Expression tFINSTR
   46       | tVAR tADD tEQUAL Expression

   47 Expression: Expression tADD Expression
   48           | Expression tSUBTRACT Expression
   49           | Expression tDIVIDE Expression
   50           | Expression tMULTIPLY Expression
   51           | tVAR
   52           | tINTNR
   53           | tPO tSUBTRACT tINTNR tPC
   54           | tPO Expression tPC


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
tINT (258) 17 37
tACO (259) 2
tACC (260) 2
tCONST (261) 18
tADD (262) 46 47
tSUBTRACT (263) 42 45 48 53
tDIVIDE (264) 49
tMULTIPLY (265) 50
tEQUAL (266) 37 41 42 45 46
tPLUSPLUS (267) 39 43
tMINUSMINUS (268) 40 44
tIF (269) 22
tELSE (270) 23
tCHECKEQ (271) 25
tPO (272) 1 19 22 32 37 53 54
tPC (273) 1 19 22 32 37 53 54
tTAB (274)
tVIRGULE (275) 15
tDOLLAR (276)
tFINSTR (277) 12 19 37 41 42 43 44 45
tINTNR (278) 37 52 53
tWHILE (279) 32
tPRINTF (280) 19
tMAIN (281) 1
tVAR (282) 15 16 19 37 39 40 41 42 43 44 45 46 51
tFOR (283) 37
tSTRING (284)
tCHECKHIGHER (285) 27
tLESS (286) 26
tLESSEQUAL (287) 28
tMOREEQUAL (288) 29


Non-terminaux, suivis des règles où ils apparaissent

$accept (34)
    à gauche: 0
Main (35)
    à gauche: 1, à droite: 0
Body (36)
    à gauche: 2, à droite: 1 22 23 32 37
Instruction (37)
    à gauche: 3 4 5, à droite: 2 3
Instructions (38)
    à gauche: 6 7 8 9 10 11, à droite: 3 4
Declaration (39)
    à gauche: 12, à droite: 10
Declarations (40)
    à gauche: 13 14, à droite: 12 13
Multideclaration (41)
    à gauche: 15, à droite: 13
Lastdeclaration (42)
    à gauche: 16, à droite: 14
vartype (43)
    à gauche: 17 18, à droite: 12
Print (44)
    à gauche: 19, à droite: 9
If (45)
    à gauche: 22, à droite: 11
$@1 (46)
    à gauche: 20, à droite: 22
$@2 (47)
    à gauche: 21, à droite: 22
Else (48)
    à gauche: 23 24, à droite: 22
Condition (49)
    à gauche: 25 26 27 28 29, à droite: 22 32 37
While (50)
    à gauche: 32, à droite: 8
$@3 (51)
    à gauche: 30, à droite: 32
$@4 (52)
    à gauche: 31, à droite: 32
For (53)
    à gauche: 37, à droite: 7
$@5 (54)
    à gauche: 33, à droite: 37
$@6 (55)
    à gauche: 34, à droite: 37
$@7 (56)
    à gauche: 35, à droite: 37
$@8 (57)
    à gauche: 36, à droite: 37
increment (58)
    à gauche: 38 39 40, à droite: 37
Calcul (59)
    à gauche: 41 42 43 44 45 46, à droite: 6
Expression (60)
    à gauche: 47 48 49 50 51 52 53 54, à droite: 25 26 27 28 29 41
    42 45 46 47 48 49 50 54


État 0

    0 $accept: . Main $end

    tMAIN  décalage et aller à l'état 1

    Main  aller à l'état 2


État 1

    1 Main: tMAIN . tPO tPC Body

    tPO  décalage et aller à l'état 3


État 2

    0 $accept: Main . $end

    $end  décalage et aller à l'état 4


État 3

    1 Main: tMAIN tPO . tPC Body

    tPC  décalage et aller à l'état 5


État 4

    0 $accept: Main $end .

    $défaut  accepter


État 5

    1 Main: tMAIN tPO tPC . Body

    tACO  décalage et aller à l'état 6

    Body  aller à l'état 7


État 6

    2 Body: tACO . Instruction tACC

    tINT     décalage et aller à l'état 8
    tCONST   décalage et aller à l'état 9
    tIF      décalage et aller à l'état 10
    tWHILE   décalage et aller à l'état 11
    tPRINTF  décalage et aller à l'état 12
    tVAR     décalage et aller à l'état 13
    tFOR     décalage et aller à l'état 14

    $défaut  réduction par utilisation de la règle 5 (Instruction)

    Instruction   aller à l'état 15
    Instructions  aller à l'état 16
    Declaration   aller à l'état 17
    vartype       aller à l'état 18
    Print         aller à l'état 19
    If            aller à l'état 20
    While         aller à l'état 21
    For           aller à l'état 22
    Calcul        aller à l'état 23


État 7

    1 Main: tMAIN tPO tPC Body .

    $défaut  réduction par utilisation de la règle 1 (Main)


État 8

   17 vartype: tINT .

    $défaut  réduction par utilisation de la règle 17 (vartype)


État 9

   18 vartype: tCONST .

    $défaut  réduction par utilisation de la règle 18 (vartype)


État 10

   22 If: tIF . tPO Condition tPC $@1 Body $@2 Else

    tPO  décalage et aller à l'état 24


État 11

   32 While: tWHILE . tPO $@3 Condition tPC $@4 Body

    tPO  décalage et aller à l'état 25


État 12

   19 Print: tPRINTF . tPO tVAR tPC tFINSTR

    tPO  décalage et aller à l'état 26


État 13

   41 Calcul: tVAR . tEQUAL Expression tFINSTR
   42       | tVAR . tEQUAL tSUBTRACT Expression tFINSTR
   43       | tVAR . tPLUSPLUS tFINSTR
   44       | tVAR . tMINUSMINUS tFINSTR
   45       | tVAR . tSUBTRACT tEQUAL Expression tFINSTR
   46       | tVAR . tADD tEQUAL Expression

    tADD         décalage et aller à l'état 27
    tSUBTRACT    décalage et aller à l'état 28
    tEQUAL       décalage et aller à l'état 29
    tPLUSPLUS    décalage et aller à l'état 30
    tMINUSMINUS  décalage et aller à l'état 31


État 14

   37 For: tFOR . tPO $@5 tINT tVAR $@6 tEQUAL tINTNR tFINSTR $@7 Condition tFINSTR $@8 increment tPC Body

    tPO  décalage et aller à l'état 32


État 15

    2 Body: tACO Instruction . tACC

    tACC  décalage et aller à l'état 33


État 16

    3 Instruction: Instructions . Instruction
    4            | Instructions .

    tINT     décalage et aller à l'état 8
    tCONST   décalage et aller à l'état 9
    tIF      décalage et aller à l'état 10
    tWHILE   décalage et aller à l'état 11
    tPRINTF  décalage et aller à l'état 12
    tVAR     décalage et aller à l'état 13
    tFOR     décalage et aller à l'état 14

    tACC      réduction par utilisation de la règle 4 (Instruction)
    tACC      [réduction par utilisation de la règle 5 (Instruction)]
    $défaut  réduction par utilisation de la règle 4 (Instruction)

    Instruction   aller à l'état 34
    Instructions  aller à l'état 16
    Declaration   aller à l'état 17
    vartype       aller à l'état 18
    Print         aller à l'état 19
    If            aller à l'état 20
    While         aller à l'état 21
    For           aller à l'état 22
    Calcul        aller à l'état 23


État 17

   10 Instructions: Declaration .

    $défaut  réduction par utilisation de la règle 10 (Instructions)


État 18

   12 Declaration: vartype . Declarations tFINSTR

    tVAR  décalage et aller à l'état 35

    Declarations      aller à l'état 36
    Multideclaration  aller à l'état 37
    Lastdeclaration   aller à l'état 38


État 19

    9 Instructions: Print .

    $défaut  réduction par utilisation de la règle 9 (Instructions)


État 20

   11 Instructions: If .

    $défaut  réduction par utilisation de la règle 11 (Instructions)


État 21

    8 Instructions: While .

    $défaut  réduction par utilisation de la règle 8 (Instructions)


État 22

    7 Instructions: For .

    $défaut  réduction par utilisation de la règle 7 (Instructions)


État 23

    6 Instructions: Calcul .

    $défaut  réduction par utilisation de la règle 6 (Instructions)


État 24

   22 If: tIF tPO . Condition tPC $@1 Body $@2 Else

    tPO     décalage et aller à l'état 39
    tINTNR  décalage et aller à l'état 40
    tVAR    décalage et aller à l'état 41

    Condition   aller à l'état 42
    Expression  aller à l'état 43


État 25

   32 While: tWHILE tPO . $@3 Condition tPC $@4 Body

    $défaut  réduction par utilisation de la règle 30 ($@3)

    $@3  aller à l'état 44


État 26

   19 Print: tPRINTF tPO . tVAR tPC tFINSTR

    tVAR  décalage et aller à l'état 45


État 27

   46 Calcul: tVAR tADD . tEQUAL Expression

    tEQUAL  décalage et aller à l'état 46


État 28

   45 Calcul: tVAR tSUBTRACT . tEQUAL Expression tFINSTR

    tEQUAL  décalage et aller à l'état 47


État 29

   41 Calcul: tVAR tEQUAL . Expression tFINSTR
   42       | tVAR tEQUAL . tSUBTRACT Expression tFINSTR

    tSUBTRACT  décalage et aller à l'état 48
    tPO        décalage et aller à l'état 39
    tINTNR     décalage et aller à l'état 40
    tVAR       décalage et aller à l'état 41

    Expression  aller à l'état 49


État 30

   43 Calcul: tVAR tPLUSPLUS . tFINSTR

    tFINSTR  décalage et aller à l'état 50


État 31

   44 Calcul: tVAR tMINUSMINUS . tFINSTR

    tFINSTR  décalage et aller à l'état 51


État 32

   37 For: tFOR tPO . $@5 tINT tVAR $@6 tEQUAL tINTNR tFINSTR $@7 Condition tFINSTR $@8 increment tPC Body

    $défaut  réduction par utilisation de la règle 33 ($@5)

    $@5  aller à l'état 52


État 33

    2 Body: tACO Instruction tACC .

    $défaut  réduction par utilisation de la règle 2 (Body)


État 34

    3 Instruction: Instructions Instruction .

    $défaut  réduction par utilisation de la règle 3 (Instruction)


État 35

   15 Multideclaration: tVAR . tVIRGULE
   16 Lastdeclaration: tVAR .

    tVIRGULE  décalage et aller à l'état 53

    $défaut  réduction par utilisation de la règle 16 (Lastdeclaration)


État 36

   12 Declaration: vartype Declarations . tFINSTR

    tFINSTR  décalage et aller à l'état 54


État 37

   13 Declarations: Multideclaration . Declarations

    tVAR  décalage et aller à l'état 35

    Declarations      aller à l'état 55
    Multideclaration  aller à l'état 37
    Lastdeclaration   aller à l'état 38


État 38

   14 Declarations: Lastdeclaration .

    $défaut  réduction par utilisation de la règle 14 (Declarations)


État 39

   53 Expression: tPO . tSUBTRACT tINTNR tPC
   54           | tPO . Expression tPC

    tSUBTRACT  décalage et aller à l'état 56
    tPO        décalage et aller à l'état 39
    tINTNR     décalage et aller à l'état 40
    tVAR       décalage et aller à l'état 41

    Expression  aller à l'état 57


État 40

   52 Expression: tINTNR .

    $défaut  réduction par utilisation de la règle 52 (Expression)


État 41

   51 Expression: tVAR .

    $défaut  réduction par utilisation de la règle 51 (Expression)


État 42

   22 If: tIF tPO Condition . tPC $@1 Body $@2 Else

    tPC  décalage et aller à l'état 58


État 43

   25 Condition: Expression . tCHECKEQ Expression
   26          | Expression . tLESS Expression
   27          | Expression . tCHECKHIGHER Expression
   28          | Expression . tLESSEQUAL Expression
   29          | Expression . tMOREEQUAL Expression
   47 Expression: Expression . tADD Expression
   48           | Expression . tSUBTRACT Expression
   49           | Expression . tDIVIDE Expression
   50           | Expression . tMULTIPLY Expression

    tADD          décalage et aller à l'état 59
    tSUBTRACT     décalage et aller à l'état 60
    tDIVIDE       décalage et aller à l'état 61
    tMULTIPLY     décalage et aller à l'état 62
    tCHECKEQ      décalage et aller à l'état 63
    tCHECKHIGHER  décalage et aller à l'état 64
    tLESS         décalage et aller à l'état 65
    tLESSEQUAL    décalage et aller à l'état 66
    tMOREEQUAL    décalage et aller à l'état 67


État 44

   32 While: tWHILE tPO $@3 . Condition tPC $@4 Body

    tPO     décalage et aller à l'état 39
    tINTNR  décalage et aller à l'état 40
    tVAR    décalage et aller à l'état 41

    Condition   aller à l'état 68
    Expression  aller à l'état 43


État 45

   19 Print: tPRINTF tPO tVAR . tPC tFINSTR

    tPC  décalage et aller à l'état 69


État 46

   46 Calcul: tVAR tADD tEQUAL . Expression

    tPO     décalage et aller à l'état 39
    tINTNR  décalage et aller à l'état 40
    tVAR    décalage et aller à l'état 41

    Expression  aller à l'état 70


État 47

   45 Calcul: tVAR tSUBTRACT tEQUAL . Expression tFINSTR

    tPO     décalage et aller à l'état 39
    tINTNR  décalage et aller à l'état 40
    tVAR    décalage et aller à l'état 41

    Expression  aller à l'état 71


État 48

   42 Calcul: tVAR tEQUAL tSUBTRACT . Expression tFINSTR

    tPO     décalage et aller à l'état 39
    tINTNR  décalage et aller à l'état 40
    tVAR    décalage et aller à l'état 41

    Expression  aller à l'état 72


État 49

   41 Calcul: tVAR tEQUAL Expression . tFINSTR
   47 Expression: Expression . tADD Expression
   48           | Expression . tSUBTRACT Expression
   49           | Expression . tDIVIDE Expression
   50           | Expression . tMULTIPLY Expression

    tADD       décalage et aller à l'état 59
    tSUBTRACT  décalage et aller à l'état 60
    tDIVIDE    décalage et aller à l'état 61
    tMULTIPLY  décalage et aller à l'état 62
    tFINSTR    décalage et aller à l'état 73


État 50

   43 Calcul: tVAR tPLUSPLUS tFINSTR .

    $défaut  réduction par utilisation de la règle 43 (Calcul)


État 51

   44 Calcul: tVAR tMINUSMINUS tFINSTR .

    $défaut  réduction par utilisation de la règle 44 (Calcul)


État 52

   37 For: tFOR tPO $@5 . tINT tVAR $@6 tEQUAL tINTNR tFINSTR $@7 Condition tFINSTR $@8 increment tPC Body

    tINT  décalage et aller à l'état 74


État 53

   15 Multideclaration: tVAR tVIRGULE .

    $défaut  réduction par utilisation de la règle 15 (Multideclaration)


État 54

   12 Declaration: vartype Declarations tFINSTR .

    $défaut  réduction par utilisation de la règle 12 (Declaration)


État 55

   13 Declarations: Multideclaration Declarations .

    $défaut  réduction par utilisation de la règle 13 (Declarations)


État 56

   53 Expression: tPO tSUBTRACT . tINTNR tPC

    tINTNR  décalage et aller à l'état 75


État 57

   47 Expression: Expression . tADD Expression
   48           | Expression . tSUBTRACT Expression
   49           | Expression . tDIVIDE Expression
   50           | Expression . tMULTIPLY Expression
   54           | tPO Expression . tPC

    tADD       décalage et aller à l'état 59
    tSUBTRACT  décalage et aller à l'état 60
    tDIVIDE    décalage et aller à l'état 61
    tMULTIPLY  décalage et aller à l'état 62
    tPC        décalage et aller à l'état 76


État 58

   22 If: tIF tPO Condition tPC . $@1 Body $@2 Else

    $défaut  réduction par utilisation de la règle 20 ($@1)

    $@1  aller à l'état 77


État 59

   47 Expression: Expression tADD . Expression

    tPO     décalage et aller à l'état 39
    tINTNR  décalage et aller à l'état 40
    tVAR    décalage et aller à l'état 41

    Expression  aller à l'état 78


État 60

   48 Expression: Expression tSUBTRACT . Expression

    tPO     décalage et aller à l'état 39
    tINTNR  décalage et aller à l'état 40
    tVAR    décalage et aller à l'état 41

    Expression  aller à l'état 79


État 61

   49 Expression: Expression tDIVIDE . Expression

    tPO     décalage et aller à l'état 39
    tINTNR  décalage et aller à l'état 40
    tVAR    décalage et aller à l'état 41

    Expression  aller à l'état 80


État 62

   50 Expression: Expression tMULTIPLY . Expression

    tPO     décalage et aller à l'état 39
    tINTNR  décalage et aller à l'état 40
    tVAR    décalage et aller à l'état 41

    Expression  aller à l'état 81


État 63

   25 Condition: Expression tCHECKEQ . Expression

    tPO     décalage et aller à l'état 39
    tINTNR  décalage et aller à l'état 40
    tVAR    décalage et aller à l'état 41

    Expression  aller à l'état 82


État 64

   27 Condition: Expression tCHECKHIGHER . Expression

    tPO     décalage et aller à l'état 39
    tINTNR  décalage et aller à l'état 40
    tVAR    décalage et aller à l'état 41

    Expression  aller à l'état 83


État 65

   26 Condition: Expression tLESS . Expression

    tPO     décalage et aller à l'état 39
    tINTNR  décalage et aller à l'état 40
    tVAR    décalage et aller à l'état 41

    Expression  aller à l'état 84


État 66

   28 Condition: Expression tLESSEQUAL . Expression

    tPO     décalage et aller à l'état 39
    tINTNR  décalage et aller à l'état 40
    tVAR    décalage et aller à l'état 41

    Expression  aller à l'état 85


État 67

   29 Condition: Expression tMOREEQUAL . Expression

    tPO     décalage et aller à l'état 39
    tINTNR  décalage et aller à l'état 40
    tVAR    décalage et aller à l'état 41

    Expression  aller à l'état 86


État 68

   32 While: tWHILE tPO $@3 Condition . tPC $@4 Body

    tPC  décalage et aller à l'état 87


État 69

   19 Print: tPRINTF tPO tVAR tPC . tFINSTR

    tFINSTR  décalage et aller à l'état 88


État 70

   46 Calcul: tVAR tADD tEQUAL Expression .
   47 Expression: Expression . tADD Expression
   48           | Expression . tSUBTRACT Expression
   49           | Expression . tDIVIDE Expression
   50           | Expression . tMULTIPLY Expression

    tADD       décalage et aller à l'état 59
    tSUBTRACT  décalage et aller à l'état 60
    tDIVIDE    décalage et aller à l'état 61
    tMULTIPLY  décalage et aller à l'état 62

    $défaut  réduction par utilisation de la règle 46 (Calcul)


État 71

   45 Calcul: tVAR tSUBTRACT tEQUAL Expression . tFINSTR
   47 Expression: Expression . tADD Expression
   48           | Expression . tSUBTRACT Expression
   49           | Expression . tDIVIDE Expression
   50           | Expression . tMULTIPLY Expression

    tADD       décalage et aller à l'état 59
    tSUBTRACT  décalage et aller à l'état 60
    tDIVIDE    décalage et aller à l'état 61
    tMULTIPLY  décalage et aller à l'état 62
    tFINSTR    décalage et aller à l'état 89


État 72

   42 Calcul: tVAR tEQUAL tSUBTRACT Expression . tFINSTR
   47 Expression: Expression . tADD Expression
   48           | Expression . tSUBTRACT Expression
   49           | Expression . tDIVIDE Expression
   50           | Expression . tMULTIPLY Expression

    tADD       décalage et aller à l'état 59
    tSUBTRACT  décalage et aller à l'état 60
    tDIVIDE    décalage et aller à l'état 61
    tMULTIPLY  décalage et aller à l'état 62
    tFINSTR    décalage et aller à l'état 90


État 73

   41 Calcul: tVAR tEQUAL Expression tFINSTR .

    $défaut  réduction par utilisation de la règle 41 (Calcul)


État 74

   37 For: tFOR tPO $@5 tINT . tVAR $@6 tEQUAL tINTNR tFINSTR $@7 Condition tFINSTR $@8 increment tPC Body

    tVAR  décalage et aller à l'état 91


État 75

   53 Expression: tPO tSUBTRACT tINTNR . tPC

    tPC  décalage et aller à l'état 92


État 76

   54 Expression: tPO Expression tPC .
